# motioncam

./: .gitignore  README.md  setupenv.sh
MotionCam-Android/: build.gradle
MotionCam-Android/MotionCam/: CMakeLists.txt  build.gradle
MotionCam-Android/MotionCam/src/main/: AndroidManifest.xml
MotionCam-Android/MotionCam/src/main/cpp/: AudioRecorder.cpp  AudioRecorder.h  DngConverterListener.cpp  DngConverterListener.h  ImageProcessorListener.cpp  ImageProcessorListener.h  JavaUtils.cpp  JavaUtils.h  NativeCamera.cpp  NativeCameraBridgeListener.cpp  NativeCameraBridgeListener.h  Processor.cpp
MotionCam-Android/MotionCam/src/main/cpp/camera/: CameraDescription.h  CameraSession.cpp  CameraSession.h  CameraSessionContext.h  CameraSessionListener.h  CameraSessionState.h  CameraStateManager.cpp  CameraStateManager.h  CaptureSessionManager.cpp  CaptureSessionManager.h  NativeClBuffer.cpp  NativeClBuffer.h  RawImageConsumer.cpp  RawImageConsumer.h
MotionCam-Android/MotionCam/src/main/java/com/motioncam/: AudioRecorder.java  CameraActivity.java  CameraCaptureManager.java  CameraOverlayTask.java  CameraStateManager.java  ConvertVideoActivity.java  DenoiseSettings.java  FirstTimeActivity.java  PostProcessActivity.java  RawVideoRecordingTask.java  Settings.java  Util.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/camera/: AsyncNativeCameraOps.java  CameraManualControl.java  CameraStartupSettings.java  NativeCamera.java  NativeCameraInfo.java  NativeCameraManager.java  NativeCameraMetadata.java  NativeCameraSessionBridge.java  NativeCameraSessionListener.java  PostProcessSettings.java  VideoRecordingStats.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/model/: CameraProfile.java  PostProcessViewModel.java  SettingsViewModel.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/processor/: ContainerMetadata.java  NativeBitmapListener.java  NativeDngConverterListener.java  NativeProcessor.java  NativeRawVideoPreviewListener.java  ProcessorService.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/ui/: BitmapDrawView.java  CameraCapturePreviewAdapter.java  CameraGridLayout.java  ConvertVideoFragment.java  PostProcessFragment.java  PostProcessPreviewAdapter.java  RawVideoAdapter.java  SettingsFragment.java  VideoEntry.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/worker/: ImageProcessWorker.java  State.java  Util.java  VideoProcessWorker.java
MotionCam-Android/MotionCam/src/main/res/drawable/: all_inclusive.xml  baseline_circle_24.xml  camera_settings_background.xml  chevron_down.xml  chevron_up.xml  focus_circle.xml  lock.xml  lock_open.xml  manual_controls_frame_background.xml  minus_circle_outline.xml  plus_circle_outline.xml  recording_timer_background.xml  selectable_text.xml
MotionCam-Android/MotionCam/src/main/res/layout/: camera_activity.xml  camera_photo_settings.xml  camera_raw_video_settings.xml  camera_selector.xml  camera_settings.xml  convert_video_activity.xml  convert_video_fragment.xml  first_time_activity.xml  manual_controls.xml  preview_controls.xml  preview_settings.xml  settings_fragment.xml  simple_list_item.xml  video_file_entry.xml
MotionCam-Android/MotionCam/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml  styles.xml
MotionCam-Android/MotionCam/src/main/res/values-it/: strings.xml
MotionCam-Android/MotionCam/src/main/res/values-ru/: strings.xml
MotionCam-Android/MotionCam/src/main/res/xml/: paths.xml
MotionCam-Android/gradle/wrapper/: gradle-wrapper.properties
libMotionCam/: .gitignore  CMakeLists.txt
libMotionCam/libMotionCam.xcodeproj/: project.pbxproj
libMotionCam/libMotionCam/generators/: CameraPreviewGenerator.cpp  Common.h  DenoiseGenerator.cpp  PostProcessGenerator.cpp  generate.bat  generate.sh
libMotionCam/libMotionCam/include/motioncam/: AudioInterface.h  BlueNoiseLUT.h  CameraPreview.h  CameraProfile.h  Color.h  DngProcessorProgress.h  FaceClassifier.h  ImageOps.h  ImageProcessor.h  Lock.h  Logger.h  Math.h  MotionCam.h  NativeBuffer.h  RawBufferManager.h  RawBufferStreamer.h  RawCameraMetadata.h  RawContainer.h  RawContainerImpl.h  RawContainerImpl_Legacy.h  RawEncoder.h  RawImageBuffer.h  RawImageMetadata.h  RawSequenceConverter.h  Settings.h  Temperature.h  Types.h  Util.h
libMotionCam/libMotionCam/source/: CameraPreview.cpp  CameraProfile.cpp  Color.cpp  ImageOps.cpp  ImageProcessor.cpp  Logger.cpp  Measure.cpp  MotionCam.cpp  RawBufferManager.cpp  RawBufferStreamer.cpp  RawCameraMetadata.cpp  RawContainer.cpp  RawContainerImpl.cpp  RawContainerImpl_Legacy.cpp  RawImageBuffer.cpp  RawSequenceConverter.cpp  Settings.cpp  Temperature.cpp  Util.cpp
raw2dng/raw2dng/: main.cpp
raw2dng/raw2dng.xcodeproj/: project.pbxproj
tools/convert/: CMakeLists.txt
tools/convert/convert.xcodeproj/: project.pbxproj
tools/convert/source/: main.cpp
